# rust-gpt

./: .gitignore  Cargo.toml
config/: rust4rs.yaml
src/: conversations.rs  lib.rs  test_util.rs  tests.rs  tui.rs
src/conversations/: tests.rs
src/tui/: conversation_handler.rs
