[package]
name = "rust-gpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.13.0"
chrono = "0.4.26"
derive_builder = "0.12.0"
rand = "0.8.5"
regex = "1.9.3"
serde = { version = "1.0.183", features = ["derive"] }
serde_yaml = "0.9.25"
thiserror = "1.0.44"
tokio = { version = "1.31.0", features = ["full"] }
