[package]
name = "rust-gpt"
version = "0.1.0"
edition = "2021"

default-run = "app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.13.0"
chrono = "0.4.26"
clap = { version = "4.4.2", features = ["derive"] }
crossterm = "0.27.0"
derive_builder = "0.12.0"
rand = "0.8.5"
ratatui = { version = "0.22.0", features = ["serde"] }
regex = "1.9.3"
serde = { version = "1.0.183", features = ["derive"] }
serde_yaml = "0.9.25"
thiserror = "1.0.44"
tokio = { version = "1.31.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4", "serde", "fast-rng", "macro-diagnostics"] }
